--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
                     </h1>
                 </div>
                 <div class="contacto">
-                    <a  class="telefono" href="tel:01-800-00-00">01-800-000-000</a>
+                    <a class="telefono" href="tel:01-800-00-00">01-800-000-000</a>
                     <nav class="navegacion">
                         <a class="link" href="#">Inicio</a>
                         <a class="link" href="#">Nosotros</a>
                         <a class="link" href="#">Modelos</a>
                         <a class="link" href="#">Galeria</a>
                         <a class="link" href="#">Contacto</a>
-                        
+
                     </nav>
                 </div>
             </div>
@@ -41,6 +41,22 @@
             </div>
         </div>
     </header>
+
+    <section class="contenedor mt-5 nosotros">
+        <div class="contenido-nosotros">
+            <h2>Sobre Nosotros </h2>
+
+            <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora
+                quaeritis. Summus brains  imo evil stalking monstra adventus resi dentevil vultus
+                comedat cerebella viventium. Qui animated corpse.</p>
+
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda voluptates, veritatis alias ipsa
+                suscipit recusandae pariatur nesciunt qui fugiat repellat, nam libero, dolore tempora. Quam nulla
+                excepturi ea tempora sed.</p>
+
+      
+        </div>
+    </section>
 
 </body>
 
