--- a/index.html
+++ b/index.html
@@ -53,10 +53,33 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda voluptates, veritatis alias ipsa
                 suscipit recusandae pariatur nesciunt qui fugiat repellat, nam libero, dolore tempora. Quam nulla
                 excepturi ea tempora sed.</p>
-
-      
         </div>
     </section>
+
+    <main class="contenedor mt-5">
+        <h2>Conoce nuestros 3 modelos</h2>
+        <div class="modelo basico">
+            <div class="contenido-modelo">
+                <h3>Modelo Básico</h3>
+                <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium. Qui animated corpse.</p>
+                <a href="" class="btn">Más Información</a>
+            </div>
+        </div> <!-- Fin modelo-->
+        <div class="modelo premier">
+            <div class="contenido-modelo">
+                <h3>Modelo Premier</h3>
+                <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium. Qui animated corpse.</p>
+                <a href="" class="btn">Más Información</a>
+            </div>
+        </div> <!-- Fin modelo-->
+        <div class="modelo elite">
+            <div class="contenido-modelo">
+                <h3>Modelo Elite</h3>
+                <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium. Qui animated corpse.</p>
+                <a href="" class="btn">Más Información</a>
+            </div>
+        </div> <!-- Fin modelo-->
+    </main>
 
 </body>
 
