--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div> <!-- Fin modelo-->
         <div class="modelo elite">
             <div class="contenido-modelo">
-                <h3>Modelo Elite</h3>
+                <h3>Modelo Elite1</h3>
                 <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium. Qui animated corpse.</p>
                 <a href="" class="btn">Más Información</a>
             </div>
