--- a/index.html
+++ b/index.html
@@ -61,25 +61,79 @@
         <div class="modelo basico">
             <div class="contenido-modelo">
                 <h3>Modelo Básico</h3>
-                <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium. Qui animated corpse.</p>
+                <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summu
+                uras, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium. Qui animated corpse.</p>
                 <a href="" class="btn">Más Información</a>
             </div>
         </div> <!-- Fin modelo-->
         <div class="modelo premier">
             <div class="contenido-modelo">
                 <h3>Modelo Premier</h3>
-                <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium. Qui animated corpse.</p>
+                <p>Zombie ipsum reversus reversus  reversus  ab. Qui ani. Qui ani. Qui ani viral inferno, nam rick grimes malum cerebro. De car dentevil vultus comedat cerebella vidat cerebella viventium. Qui aventium. Qui animated corpse.</p>
                 <a href="" class="btn">Más Información</a>
             </div>
         </div> <!-- Fin modelo-->
         <div class="modelo elite">
             <div class="contenido-modelo">
-                <h3>Modelo Elite1</h3>
+                <h3>Modelo Elite</h3>
                 <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium. Qui animated corpse.</p>
                 <a href="" class="btn">Más Información</a>
             </div>
         </div> <!-- Fin modelo-->
     </main>
+
+    <section class="contenedor mt-5">
+        <h2>Galeria</h2>
+        <div class="galeria">
+            <div class="imagen">
+                <img src="img/imagen_1.jpg" alt="imagen galeria">
+            </div>
+            <div class="imagen">
+                <img src="img/imagen_2.jpg" alt="imagen galeria">
+            </div>
+            <div class="imagen">
+                <img src="img/imagen_3.jpg" alt="imagen galeria">
+            </div>
+            <div class="imagen">
+                <img src="img/imagen_4.jpg" alt="imagen galeria">
+            </div>
+            <div class="imagen">
+                <img src="img/imagen_5.jpg" alt="imagen galeria">
+            </div>
+            <div class="imagen">
+                <img src="img/imagen_6.jpg" alt="imagen galeria">
+            </div>
+            <div class="imagen">
+                <img src="img/imagen_7.jpg" alt="imagen galeria">
+            </div>
+        </div>
+
+    </section>
+
+    <footer class="footer mt-5">
+        <div class="contenedor">
+            <div class="barra">
+                <div class="logo">
+                    <h1 class="nombre-sitio">
+                        Arquitectura<span>Bosque</span>
+                    </h1>
+                </div>
+                <div class="contacto">
+                    <a class="telefono" href="tel:01-800-00-00">01-800-000-000</a>
+                    <nav class="navegacion">
+                        <a class="link" href="#">Inicio</a>
+                        <a class="link" href="#">Nosotros</a>
+                        <a class="link" href="#">Modelos</a>
+                        <a class="link" href="#">Galeria</a>
+                        <a class="link" href="#">Contacto</a>
+
+                    </nav>
+                </div>
+            </div>  
+        </div>
+
+        <p class="copyright">Todos los derechos reservados &copy</p>
+    </footer>
 
 </body>
 
